--- a/RestaurantSalaries.csproj
+++ b/RestaurantSalaries.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.12" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.12">
 			<PrivateAssets>all</PrivateAssets>
