--- a/RestaurantSalaries.csproj
+++ b/RestaurantSalaries.csproj
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+		<PackageReference Include="ClosedXML" Version="0.104.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.12" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.12">
